# copilotguard-daemon

./: .gitignore  CLAUDE.md  Cargo.toml  LEARNINGS.md  LICENSE  README.md  install.sh
.github/workflows/: release.yml
scripts/: copilot-wrapper.sh
src/: api.rs  api_client.rs  ca.rs  config.rs  hosts.rs  main.rs  policy.rs  policy_client.rs  policy_manager.rs  proxy.rs  service.rs
