[package]
name = "copilotguard-daemon"
version = "0.4.1"
edition = "2021"
description = "Lightweight daemon for intercepting and analyzing AI coding assistant traffic"
license = "MIT"
repository = "https://github.com/tonycodes/copilotguard-daemon"
readme = "README.md"

[lib]
name = "copilotguard_daemon"
path = "src/lib.rs"

[[bin]]
name = "copilotguard-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/HTTPS proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP client for forwarding requests (uses native-tls to avoid rustls version conflicts)
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "json"] }

# TLS/SSL
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = "0.13"  # Certificate generation
x509-parser = "0.16"

# Time handling
time = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System integration
daemonize = "0.5"

# Error handling
anyhow = "1"
thiserror = "1"

# Cryptography (policy signature verification)
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

# Cryptography (policy cache encryption)
chacha20poly1305 = "0.10"
blake3 = "1"

# Regex (heuristic pattern matching)
regex = "1"

# UUID generation for request IDs
uuid = { version = "1", features = ["v4"] }

# Async utilities
pin-project-lite = "0.2"

# Unix utilities
libc = "0.2"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps if needed

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
